@@ -17,6 +17,7 @@
 - API Change: Added parameters to Elastic Interpolation.
 - API Change: Removed Actor#setCenterPosition, added setPosition(x,y,align).
 - API Change: JsonReader, forward slash added to characters an unquoted strings cannot start with.
+- API Change: Remove BatchTiledMapRenderer#getSpriteBatch, added getBatch() . Change variable name spritebatch to batch.
 
 [1.3.1]
 - API change: Viewport refactoring. https://github.com/libgdx/libgdx/pull/2220
